test/files/neg/t9231.check
t9231.scala:8: error: not found: type DoesNotExist
  foo[DoesNotExist]
      ^
one error found
